# bookly

./: .gitignore  README.md  package.json  pnpm-lock.yaml  tsconfig.json  vite.config.ts
.github/workflows/: release.yml
client/: README.md  index.html  package.json  pnpm-lock.yaml  vite.config.ts
client/public/locales/: en.json
client/public/locales/ar/: translation.json
client/public/locales/en/: translation.json
client/src/: App.css  App.tsx  i18n.js  index.css  main.tsx
client/src/components/authors/: authorcard.tsx  authorsearchbar.tsx  authorsfilter.tsx  newauthorbutton.tsx
client/src/components/books/: bookcard.tsx  books.tsx  bookscontainer.tsx  booksearchbar.tsx  booksfilter.tsx  newbook.tsx  newbookbutton.tsx
client/src/components/navbar/: languageswitcher.tsx  navbar.tsx  themeswitcher.tsx
client/src/data/: books.json
client/src/lib/: books.ts  locale.ts
client/src/pages/author/: AuthorPage.tsx
client/src/pages/authors/: Authors.tsx  index.html
client/src/pages/book/: BookPage.tsx
server/: package.json  pnpm-lock.yaml  server.js
server/data/: authors.json  books.json
server/lib/: authors.js  books.js  config.js
server/routes/: authors.js  books.js
src/: App.tsx  index.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src/components/: languagebutton.tsx  main.tsx  navbar.tsx
src/components/books/: books.tsx
src/components/navbar/: navbar.tsx  themeswitcher.tsx
src/pages/authors/: Authors.tsx  main.tsx
src/pages/data/: Data.tsx
src/pages/settings/: Settings.tsx
(+9 files in other folders)
