[package]
name = "app"
version = "0.1.1"
description = "A Tauri App"
authors = ["yasiralamriki"]
license = ""
repository = "https://github.com/yasiralamriki/bookly"
default-run = "app"
edition = "2021"
rust-version = "1.77.2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "2", features = [] }

[profile.release]
strip = true
lto = true
